--- a/OneDrive/Desktop/Project/templates/authenticate/index.html
+++ b/OneDrive/Desktop/Project/templates/authenticate/index.html
@@ -13,12 +13,24 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        {% for message in messages %}
+        <div class="alert alert-{{message.tags}} alert-dimension fade show" role="alert">
+        <strong> Message: </strong> {{message}}
+        <button type="button" class="close" data-dismiss="alert" aria-labels="close">
+        <span aria-hidden="true"> &times; </span>
+        </button>
+        {% endfor %}
         <h3> Welcome to Personalized Financial Assistant </h3>
+
+        {% if user.is_authenticated %}
+        <h3> Hello, {{fname}} </h3>
+        <h4> You're successfully logged in. </h4>
+        <button type="submit"> <a href="/logout">Logout </a></button>
+        {% else %}
 
         <button type="submit"> <a href="/register">Register </a></button>
         <button type="submit"> <a href="/signin">Signin </a></button>
-        <button type="submit"> <a href="/logout">Logout </a></button>
-
         <script src="" async defer></script>
+        {% endif%}
     </body>
 </html>
