--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,7 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
     opacity: 1;
+    color: #46f00d !important;
 }
 span.navbar-text {
     display: flex;
@@ -155,7 +156,7 @@ span.navbar-text {
   color: #171ac4;
   border: 1px solid #0d7383;
   padding: 18px 34px;
-  font-size: 18px;
+  font-size: 20px;
   margin-left: 18px;
 	position: relative;
 	background-color: transparent;
@@ -618,7 +619,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #fff;
 }
 .contact form input:focus::placeholder, .contact form textarea:focus::placeholder {
-  color: #0be713;
+  color: #09e3ea;
   opacity: 0.8;
 }
 .contact form button {
