--- a/src/App.css
+++ b/src/App.css
@@ -440,6 +440,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .proj-txtx {
   position: absolute;
+  
   text-align: center;
   top: 65%;
   left: 50%;
@@ -458,7 +459,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.8px;
   line-height: 1.1em;
 }
-.proj-txtx span {
+.project .proj-txtx span {
   font-style: italic;
   font-weight: 400;
   font-size: 15px;
